test/tests/stages/18_structures/invalid_types/extra_credit/union_tag_resolution/compare_struct_and_union_ptrs.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[36]:
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(tag)
  ;
  struct
  identifier(tag)
  *
  identifier(struct_ptr)
  =
  const int(0)
  ;
  {
  union
  identifier(tag)
  ;
  union
  identifier(tag)
  *
  identifier(union_ptr)
  =
  const int(0)
  ;
  return
  (
  identifier(struct_ptr)
  ==
  identifier(union_ptr)
  )
  ;
  }
  }
